expose published_at field in items
